--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </head>
 <body>
     <header>
-        <h1>Group - Webpage!</h1>
+        <h1>Group 7Teen - Webpage!</h1>
     </header>
     <nav>
         <ul>
@@ -80,7 +80,7 @@
         <p></p>
     </section>
     <footer>
-        <p>&copy; 2024 Group - Webpage!. All rights reserved.</p>
+        <p>&copy; 2024 Group 7Teen - Webpage!. All rights reserved.</p>
     </footer>
 </body>
 </html>
