--- a/activities.html
+++ b/activities.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Fatherless!</h1>
+        <h1>Group 7Teen - Webpage!</h1>
     </header>
     <nav>
         <ul>
@@ -78,7 +78,7 @@
         <h2>Activities</h2>
     </section>
     <footer>
-        <p>&copy; 2024 Fatherless. All rights reserved.</p>
+        <p>&copy; Group 7Teen - Webpage. All rights reserved.</p>
     </footer>
 </body>
 </html>
