--- a/activities.html
+++ b/activities.html
@@ -78,7 +78,7 @@
         <h2>Activities</h2>
     </section>
     <footer>
-        <p>&copy; Group 7Teen - Webpage. All rights reserved.</p>
+        <p>&copy; 2024 Group 7Teen - Webpage! All rights reserved.</p>
     </footer>
 </body>
 </html>
