--- a/profile.html
+++ b/profile.html
@@ -149,7 +149,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Group - Webpage!. All rights reserved.</p>
+        <p>&copy; 2024 Group 7Teen - Webpage!. All rights reserved.</p>
     </footer>
 </body>
 </html>
