--- a/activities.html
+++ b/activities.html
@@ -61,6 +61,15 @@
             bottom: 0;
             width: 100%;
         }
+        section a {
+            color: #ffffff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        /* Change the color of the link on hover */
+        section a:hover {
+            color: #ff9393;
+        }
     </style>
 </head>
 <body>
@@ -76,6 +85,7 @@
     </nav>
     <section>
         <h2>Activities</h2>
+        <a href="activity.png" target="_blank">Activity - Infographic</a>
     </section>
     <footer>
         <p>&copy; 2024 Group 7Teen - Webpage! All rights reserved.</p>
