--- a/activities.html
+++ b/activities.html
@@ -78,7 +78,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="webpage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
             <li><a href="reflections.html">Reflection</a></li>
         </ul>
