--- a/profile.html
+++ b/profile.html
@@ -105,7 +105,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="webpage.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="activities.html">Activities</a></li>
             <li><a href="reflections.html">Reflection</a></li>
         </ul>
