--- a/reflections.html
+++ b/reflections.html
@@ -44,10 +44,9 @@
         }
         nav ul li a:hover{
             transform: scale(1.1);
-            color: #ff8f8f;
+            color: #f46161;
         }
         section {
-            background-color: rgba(0, 0, 0, 0.75);
             padding: 20px;
             text-align: center;
             color: #fff; /* Add text color for better contrast */
@@ -61,6 +60,17 @@
             bottom: 0;
             width: 100%;
         }
+        section a {
+            color: #ffffff;
+            text-decoration: none;
+            transition: color 0.3s ease;
+            font-size: 20px;
+        }
+        /* Change the color of the link on hover */
+        section a:hover {
+            color: #e94141;
+            font-size: 25px;
+        }
     </style>
 </head>
 <body>
@@ -71,11 +81,12 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="activities.html">Activities</a></li>
+            <li><a href="activities.html">Reflection</a></li>
         </ul>
     </nav>
     <section>
         <h2>Reflections</h2>
+        <a href="First Reflection.png" target="_blank">Reflection #1</a>
     </section>
     <footer>
         <p>&copy; 2024 Group 7Teen - Webpage! All rights reserved.</p>
