--- a/activities.html
+++ b/activities.html
@@ -44,10 +44,9 @@
         }
         nav ul li a:hover{
             transform: scale(1.1);
-            color: #ff8f8f;
+            color: #f46161;
         }
         section {
-            background-color: rgba(0, 0, 0, 0.75);
             padding: 20px;
             text-align: center;
             color: #fff; /* Add text color for better contrast */
@@ -65,10 +64,12 @@
             color: #ffffff;
             text-decoration: none;
             transition: color 0.3s ease;
+            font-size: 20px;
         }
         /* Change the color of the link on hover */
         section a:hover {
-            color: #ff9393;
+            color: #e94141;
+            font-size: 25px;
         }
     </style>
 </head>
