--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         }
         nav ul li a:hover{
             transform: scale(1.1);
-            color: #ff8f8f;
+            color: #f46161;
         }
         section {
-            background-color: rgba(0, 0, 0, 0.75);
             padding: 20px;
             text-align: center;
             color: #fff; /* Add text color for better contrast */
