--- a/reflections.html
+++ b/reflections.html
@@ -81,7 +81,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="activities.html">Reflection</a></li>
+            <li><a href="activities.html">Activities</a></li>
         </ul>
     </nav>
     <section>
